--- a/잉크_앱프로젝트_정보/메뉴_구성.md
+++ b/잉크_앱프로젝트_정보/메뉴_구성.md
@@ -6,8 +6,7 @@ INK 최종 기능 명세서 v1.0 기준. 하단 탭 4개 **(동결)**.
 |------|-----|------|
 | 1 | **친구** | 친구 목록·추가 |
 | 2 | **채팅** | **기본 진입** 탭. 채팅 목록 |
-| 3 | **모아보기(태그함)** | 게시판 없음. 태그된 콘텐츠 모아보기 |
+| 3 | **모아보기(태그함)** | 태그된 콘텐츠 모아보기 |
 | 4 | **설정** | 앱 설정 |
 
-- **"게시판" 기능 없음(완전 제거)**. "모아보기(태그함)"으로 대체.
 - 색상·아이콘 규칙은 `기본_디자인_색정보.md`의 "하단 메뉴" 섹션을 따릅니다.
