--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -7,15 +7,15 @@
 ## Phase 1: 기반 설정
 
 ### 1.1 프로젝트 구조 정리
-- [ ] 폴더 구조 설계 (screens, widgets, models, services, utils)
-- [ ] 상태관리 도입 (Provider / Riverpod / Bloc 중 선택)
-- [ ] 라우팅 설정 (go_router 권장)
+- [x] 폴더 구조 설계 (screens, widgets, models, services, core, providers, router)
+- [x] 상태관리 도입 (Provider)
+- [x] 라우팅 설정 (go_router)
 
 ### 1.2 인증 시스템
 - [x] Firebase 연동
 - [x] Google 로그인
-- [ ] 로그아웃 처리
-- [ ] 사용자 세션 유지 (자동 로그인)
+- [x] 로그아웃 처리
+- [x] 사용자 세션 유지 (자동 로그인)
 
 ### 1.3 데이터베이스 설계
 - [ ] Firestore 컬렉션 설계
