--- a/요청사항_결과_보고서/001_프로젝트구조_인증시스템.md
+++ b/요청사항_결과_보고서/001_프로젝트구조_인증시스템.md
@@ -168,3 +168,92 @@ flutter run
 3. Google 로그인 → 홈 화면
 4. 앱 재시작 → 자동 로그인 (홈 화면 바로 진입)
 5. 설정 → 로그아웃 → 로그인 화면
+
+---
+
+## 기술 선택 이유
+
+| 기술 | 선택 이유 |
+|------|-----------|
+| **Provider** | Flutter 공식 권장, 간단하고 러닝커브 낮음, 작은~중간 규모 앱에 적합 |
+| **go_router** | 선언적 라우팅, 인증 기반 리다이렉트 간편, 딥링크 지원, refreshListenable로 상태 연동 용이 |
+| **Firebase Auth** | Google 로그인 간편 연동, 다양한 소셜 로그인 확장 가능 |
+
+---
+
+## 개발 중 발생한 오류 및 대처
+
+### 오류 1: Firebase 패키지 버전 충돌
+
+**증상:**
+```
+Because firebase_auth >=5.3.4 <5.6.2 requires firebase_core_platform_interface ^5.3.1...
+firebase_core ^4.4.0 is incompatible with firebase_auth ^5.5.1
+```
+
+**원인:**
+- `firebase_core: ^4.4.0`과 `firebase_auth: ^5.5.1` 버전 간 의존성 충돌
+
+**해결:**
+```yaml
+# 변경 전
+firebase_auth: ^5.5.1
+
+# 변경 후
+firebase_auth: ^6.1.4
+```
+- firebase_auth를 최신 버전(^6.1.4)으로 업그레이드하여 해결
+
+---
+
+### 오류 2: Unused Import 경고
+
+**증상:**
+```
+warning • Unused import: 'package:flutter/material.dart' • lib/router/app_router.dart
+warning • Unused import: 'package:provider/provider.dart' • lib/router/app_router.dart
+```
+
+**원인:**
+- app_router.dart에서 사용하지 않는 import 문 존재
+
+**해결:**
+```dart
+// 변경 전
+import 'package:flutter/material.dart';
+import 'package:go_router/go_router.dart';
+import 'package:provider/provider.dart';
+
+// 변경 후
+import 'package:go_router/go_router.dart';
+```
+- 사용하지 않는 import 제거
+
+---
+
+## 알려진 제한사항 / TODO
+
+- [ ] Apple 로그인 미구현 (iOS App Store 배포 시 필수)
+- [ ] 이메일/비밀번호 로그인 미구현
+- [ ] 에러 핸들링 고도화 필요 (네트워크 에러, 서버 에러 구분)
+- [ ] 네트워크 상태 체크 미구현
+- [ ] 로그인 화면 로고 이미지 적용 필요
+
+---
+
+## 참고 문서
+
+- `잉크_앱프로젝트_정보/INK_최종_기능_명세서_v1.0.md`
+- `잉크_앱프로젝트_정보/INK_디자인_명세서_v1.0.md`
+- `잉크_앱프로젝트_정보/기본_디자인_색정보.md`
+- `잉크_앱프로젝트_정보/개발_순서.md`
+
+---
+
+## 다음 단계
+
+| Phase | 내용 |
+|-------|------|
+| **1.3** | Firestore 컬렉션 설계 (users, friends, rooms, strokes, messages, tags) |
+| **2.1** | 반응형 레이아웃 기반 (폰/패드/PC 감지) |
+| **2.2** | 하단 탭 네비게이션 완성 |
