Phase 1.3 & 2 완료: DB 설계 및 반응형 UI
- Firestore 컬렉션 모델 6개 생성 (users, friends, rooms, messages, strokes, tags)
- UserService 추가
- 반응형 레이아웃 유틸리티 (폰/패드/PC 감지)
- AdaptiveScaffold (폰: 하단탭, 패드: 3패널)
- 탭 화면 4개 완성 (친구, 채팅, 모아보기, 설정)
- cloud_firestore 패키지 추가 (v6.1.2)

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -18,35 +18,35 @@
 - [x] 사용자 세션 유지 (자동 로그인)
 
 ### 1.3 데이터베이스 설계
-- [ ] Firestore 컬렉션 설계
+- [x] Firestore 컬렉션 설계
   - users (사용자 정보)
   - friends (친구 관계)
   - rooms (채팅방)
   - strokes (손글씨 스트로크)
   - messages (텍스트/첨부)
   - tags (태그 정보)
-- [ ] Firebase Realtime DB 설계 (실시간 스트로크용)
+- [x] Firestore 실시간 리스너로 대체 (Realtime DB 버전 충돌)
 
 ---
 
 ## Phase 2: 기본 UI 프레임
 
 ### 2.1 반응형 레이아웃 기반
-- [ ] 디바이스 감지 (폰/패드/PC)
-- [ ] 패드: 3패널 레이아웃 (좌 네비/중 목록/우 콘텐츠)
-- [ ] 폰: 탭 기반 + 화면 전환
+- [x] 디바이스 감지 (폰/패드/PC)
+- [x] 패드: 3패널 레이아웃 (좌 네비레일/중 목록/우 상세)
+- [x] 폰: 탭 기반 + 화면 전환
 
 ### 2.2 하단 탭 네비게이션 (동결)
-- [ ] 친구 탭
-- [ ] 채팅 탭 (기본 진입)
-- [ ] 모아보기(태그함) 탭
-- [ ] 설정 탭
+- [x] 친구 탭
+- [x] 채팅 탭 (기본 진입)
+- [x] 모아보기(태그함) 탭
+- [x] 설정 탭
 
 ### 2.3 테마/색상 적용
-- [ ] Paper 배경 (#FAF7F0)
-- [ ] Ink 텍스트 (#0F172A)
-- [ ] Gold 강조 (#B08D57)
-- [ ] 다크모드 지원
+- [x] Paper 배경 (#FAF7F0)
+- [x] Ink 텍스트 (#0F172A)
+- [x] Gold 강조 (#B08D57)
+- [x] 다크모드 지원
 
 ---
 
