--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -53,17 +53,17 @@
 ## Phase 3: 친구 기능
 
 ### 3.1 친구 목록
-- [ ] 친구 목록 화면 UI
-- [ ] Firestore에서 친구 목록 조회
+- [x] 친구 목록 화면 UI
+- [x] Firestore에서 친구 목록 조회
 
 ### 3.2 친구 추가
-- [ ] ID로 친구 추가
-- [ ] 전화번호로 친구 추가
+- [x] ID로 친구 추가
+- [x] 전화번호로 친구 추가
 - [ ] (선택) 연락처 동기화
 
 ### 3.3 친구 관리
-- [ ] 친구 삭제
-- [ ] 친구 차단
+- [x] 친구 삭제
+- [x] 친구 차단
 
 ---
 
