연락처 동기화 기능 추가
- flutter_contacts, permission_handler 패키지 추가
- ContactService 생성 (연락처 읽기, INK 가입자 찾기)
- ContactSyncScreen 생성 (권한 요청, 친구 추천 목록)
- UserModel에 phoneNumber 필드 추가
- Android/iOS 연락처 권한 설정

--- a/요청사항_결과_보고서/003_친구기능.md
+++ b/요청사항_결과_보고서/003_친구기능.md
@@ -50,10 +50,24 @@
 3. ID로 추가와 동일 로직
 ```
 
+#### 연락처 동기화 (추가)
+```
+1. 연락처 권한 요청 (Android/iOS)
+2. 연락처에서 전화번호 추출 및 정규화
+3. Firestore에서 INK 가입자 조회 (30개씩 분할)
+4. 이미 친구인 사용자 제외
+5. 다중 선택 후 일괄 추가
+```
+
 #### UI
-- 친구 추가 바텀 시트 (ID/전화번호 선택)
+- 친구 추가 바텀 시트 (ID/전화번호/연락처 선택)
 - ID 입력 다이얼로그
 - 전화번호 입력 다이얼로그
+- **연락처 동기화 화면** (ContactSyncScreen)
+  - 권한 요청 UI
+  - 추천 친구 목록 (체크박스)
+  - 전체 선택/해제
+  - 일괄 친구 추가
 - 로딩 상태 / 에러 메시지 표시
 
 ---
@@ -95,12 +109,18 @@
 ### 신규 생성
 
 - `lib/services/friend_service.dart` – 친구 서비스 (Firestore CRUD)
+- `lib/services/contact_service.dart` – 연락처 동기화 서비스
 - `lib/providers/friend_provider.dart` – 친구 상태 관리
+- `lib/screens/friends/contact_sync_screen.dart` – 연락처 친구 찾기 화면
 
 ### 수정
 
 - `lib/main.dart` – FriendProvider 추가
-- `lib/screens/home/tabs/friends_tab.dart` – 전체 UI 재구현
+- `lib/screens/home/tabs/friends_tab.dart` – 전체 UI 재구현, 연락처 동기화 연결
+- `lib/models/user_model.dart` – phoneNumber 필드 추가
+- `pubspec.yaml` – flutter_contacts, permission_handler 추가
+- `android/app/src/main/AndroidManifest.xml` – READ_CONTACTS 권한
+- `ios/Runner/Info.plist` – NSContactsUsageDescription 추가
 
 ### 문서 업데이트
 
@@ -192,7 +212,7 @@ final Map<String, UserModel> _friendUserCache = {};
 
 ## 알려진 제한사항 / TODO
 
-- [ ] 연락처 동기화 기반 친구 추천 (선택 기능)
+- [x] 연락처 동기화 기반 친구 추천 (선택 기능) - 추가 완료
 - [ ] 친구 검색 (실시간 필터링)
 - [ ] 친구 별명 설정 기능
 - [ ] 친구 요청 수락/거절 UI
