Phase 4 완료: 채팅 목록 (퍼즐 카드 UI)
- RoomService, RoomProvider 생성
- PuzzleCard 위젯 (방 이름, 시간, 미확인 배지, 퍼즐 타일)
- 1:1 채팅 생성 (중복 방지)
- 그룹 채팅 생성 (이름 + 멤버 선택)
- 역할 관리 (Owner/Admin/Member/Viewer)
- 채팅방 옵션 (롱프레스 메뉴)

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -70,19 +70,19 @@
 ## Phase 4: 채팅 목록 (퍼즐 카드 UI)
 
 ### 4.1 채팅 목록 화면
-- [ ] 퍼즐 카드 UI 구현
+- [x] 퍼즐 카드 UI 구현
   - 방 이름 / 마지막 활동 시간 / 미확인 배지
   - 마지막 손글씨 미리보기 (퍼즐 타일)
-- [ ] 탭: 채팅방 진입
-- [ ] 롱프레스: 컨텍스트 메뉴
+- [x] 탭: 채팅방 진입
+- [x] 롱프레스: 컨텍스트 메뉴
 
 ### 4.2 채팅방 생성
-- [ ] 1:1 채팅 생성
-- [ ] 단톡(그룹채팅) 생성
+- [x] 1:1 채팅 생성
+- [x] 단톡(그룹채팅) 생성
 - [ ] 초대 링크 생성 (선택)
 
 ### 4.3 채팅방 설정
-- [ ] 역할 관리 (Owner / Admin / Member / Viewer)
+- [x] 역할 관리 (Owner / Admin / Member / Viewer)
 - [ ] 권한 설정 (도형 수정, 내보내기 등)
 
 ---
