Phase 5 완료: 캔버스 (테스트 채팅방 포함)
- CanvasScreen, CanvasController 생성
- DrawingCanvas 위젯 (무한 캔버스, 핀치 줌)
- PenToolbar 위젯 (펜/색상/굵기/Undo/Redo)
- 입력 정책: 펜=그리기, 손가락=이동
- AUTO 색상 모드
- 스트로크 단위 지우개
- 테스트 채팅방 생성 기능 (설정)

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -90,31 +90,31 @@
 ## Phase 5: 캔버스 (핵심 기능)
 
 ### 5.1 캔버스 기본
-- [ ] 무한 캔버스 구현
-- [ ] 핀치 줌 확대/축소
-- [ ] 캔버스 확장 방식 (사각/세로)
+- [x] 무한 캔버스 구현
+- [x] 핀치 줌 확대/축소
+- [x] 캔버스 이동 (패닝)
 
 ### 5.2 입력 정책 (패드)
-- [ ] 손가락 = 이동/선택/스크롤
-- [ ] 펜 = 글쓰기/그리기만
-- [ ] Apple Pencil / S Pen 감지
+- [x] 손가락 = 이동/선택/스크롤
+- [x] 펜 = 글쓰기/그리기만
+- [x] Apple Pencil / S Pen 감지
 
 ### 5.3 펜 스타일 툴바 (상단 중앙)
-- [ ] 펜 슬롯 3개 (펜1, 펜2, 지우개)
-- [ ] 선택 도구 (라쏘/사각)
-- [ ] 색상 슬롯 3개
-- [ ] 굵기 슬롯 3개
-- [ ] Undo / Redo
-- [ ] 도형 선택
+- [x] 펜 슬롯 3개 (펜1, 펜2, 지우개)
+- [x] 선택 도구 (라쏘/사각)
+- [x] 색상 슬롯 3개
+- [x] 굵기 슬롯 3개
+- [x] Undo / Redo
+- [x] 도형 선택 버튼
 
 ### 5.4 자동 색상 구분 (AUTO)
-- [ ] 사용자별 자동 색상 할당
-- [ ] 수동 선택 시 우선 적용
-- [ ] 툴바 AUTO 상태 표시
+- [x] AUTO 모드 토글
+- [x] 수동 선택 시 우선 적용
+- [x] 툴바 AUTO 상태 표시
 
 ### 5.5 지우개
-- [ ] 펜↔지우개 전환
-- [ ] 스트로크 단위 지우기
+- [x] 펜↔지우개 전환
+- [x] 스트로크 단위 지우기
 - [ ] (선택) 픽셀 지우기
 
 ---
