보고서 업데이트: Firestore 오류 및 해결 방법 추가
- 오류 3: Firestore unavailable (DB 미생성)
- 오류 4: PERMISSION_DENIED (보안 규칙 미설정)

--- a/요청사항_결과_보고서/005_캔버스.md
+++ b/요청사항_결과_보고서/005_캔버스.md
@@ -218,6 +218,56 @@ The value of the field '_baseOffset' isn't used
 
 ---
 
+### 오류 3: Firestore unavailable
+
+**증상:**
+```
+FirebaseException ([cloud_firestore/unavailable] The service is currently unavailable. 
+This is a most likely a transient condition and may be corrected by retrying with a backoff.)
+```
+
+**원인:**
+- Firebase Console에서 **Firestore 데이터베이스가 생성되지 않음**
+
+**해결:**
+1. Firebase Console → Firestore Database
+2. "데이터베이스 만들기" 클릭
+3. 테스트 모드 선택 → 위치 선택 (asia-northeast3 서울) → 사용 설정
+
+---
+
+### 오류 4: Firestore PERMISSION_DENIED
+
+**증상:**
+```
+W/Firestore: Listen for Query(...) failed: Status{code=PERMISSION_DENIED, 
+description=Missing or insufficient permissions., cause=null}
+```
+
+**원인:**
+- Firestore **보안 규칙이 설정되지 않음** (기본값이 모든 접근 차단)
+
+**해결:**
+1. Firebase Console → Firestore Database → **규칙** 탭
+2. 다음 규칙으로 교체:
+```javascript
+rules_version = '2';
+service cloud.firestore {
+  match /databases/{database}/documents {
+    match /{document=**} {
+      allow read, write: if request.auth != null;
+    }
+  }
+}
+```
+3. **"게시"** 버튼 클릭
+
+**참고:**
+- 이 규칙은 로그인한 사용자만 읽기/쓰기 허용
+- 프로덕션에서는 더 세밀한 규칙 필요
+
+---
+
 ## 알려진 제한사항 / TODO
 
 - [ ] 픽셀 단위 지우기 (선택 기능)
