Phase 6 완료: 실시간 동기화
- StrokeService 생성 (Firestore 실시간 스트림)
- Douglas-Peucker 알고리즘 (좌표 압축)
- 고스트 라이팅 (반투명 → 2초 후 확정)
- 작성자 표시 (펜 호버/터치 툴팁)
- 사용자별 자동 색상 (UserAutoColor)

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -122,22 +122,22 @@
 ## Phase 6: 실시간 동기화 (핵심)
 
 ### 6.1 스트로크 실시간 전송
-- [ ] Firebase Realtime DB 연동
-- [ ] 좌표 데이터 JSON 스트리밍
-- [ ] Douglas-Peucker 알고리즘 (데이터 압축)
+- [x] Firestore 실시간 스트림 연동
+- [x] 좌표 데이터 JSON 스트리밍
+- [x] Douglas-Peucker 알고리즘 (데이터 압축)
 
 ### 6.2 고스트 라이팅
-- [ ] 작성 중 반투명(ghost) 표시
-- [ ] N초 후 100% 확정
+- [x] 작성 중 반투명(ghost) 표시
+- [x] 2초 후 100% 확정
 
 ### 6.3 작성자 표시
-- [ ] 스트로크/오브젝트에 작성자 정보 저장
-- [ ] 패드: 펜 호버 시 툴팁
-- [ ] 폰: 짧게 터치 시 툴팁
+- [x] 스트로크/오브젝트에 작성자 정보 저장
+- [x] 패드: 펜 호버 시 툴팁
+- [x] 폰: 짧게 터치 시 툴팁
 
 ### 6.4 호버 사용자 식별
-- [ ] 펜 근접 시 커서/닉네임 표시
-- [ ] 친구만 / 전체 / OFF 설정
+- [x] 펜 근접 시 커서/닉네임 표시
+- [ ] (선택) 친구만 / 전체 / OFF 설정
 
 ---
 
