펜 전용 모드 토글 추가 (테스트용)
- PEN/ALL 토글 버튼 (툴바 우측)
- PEN: 스타일러스만 그리기
- ALL: 마우스/터치도 그리기 가능
- TODO: 프로덕션 전 제거 또는 설정 이동

--- a/요청사항_결과_보고서/006_실시간동기화.md
+++ b/요청사항_결과_보고서/006_실시간동기화.md
@@ -243,6 +243,30 @@ The getter '_localStrokes' isn't defined for the type 'CanvasController'
 - [ ] 다른 사용자 실시간 고스트 표시 (커서 위치)
 - [ ] Redo 기능 (서버에서 복구)
 - [ ] 실제 사용자 이름 조회 (현재 ID 일부 표시)
+- [ ] **펜 전용 모드 토글 제거 또는 설정으로 이동** (테스트용 임시 기능)
+
+---
+
+## 추가 수정 (2026-01-29)
+
+### 펜 전용 모드 토글 (테스트용)
+
+**배경:**
+- 컴퓨터에서 테스트 시 스타일러스가 없어 그리기 기능 테스트 불가
+- 임시로 마우스/터치로도 그릴 수 있는 토글 추가
+
+**구현:**
+- 툴바 우측에 `PEN` / `ALL` 토글 버튼
+- `PEN`: 펜(스타일러스)으로만 그리기 (기본값 OFF)
+- `ALL`: 마우스/터치로도 그리기 가능
+
+**코드 위치:**
+- `CanvasController._penOnlyMode`
+- `DrawingCanvas._onPointerDown/Move/Up`
+- `PenToolbar._buildPenOnlyToggle()`
+
+**TODO:**
+- 프로덕션 배포 전 제거하거나 설정 화면으로 이동 필요
 
 ---
 
