Phase 7 완료: 텍스트 입력
- TextService 생성 (Firestore 실시간 동기화)
- 위치 지정형 텍스트 (탭 → 다이얼로그 → 배치)
- 빠른 텍스트 (하단 입력창 → 자동 배치)
- 텍스트 렌더링 및 삭제
- InputMode enum (pen, text, quickText)

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -144,10 +144,10 @@
 ## Phase 7: 텍스트 입력
 
 ### 7.1 위치 지정형 (정밀 배치)
-- [ ] 터치 → 입력창 → 배치
+- [x] 터치 → 입력창 → 배치
 
 ### 7.2 빠른 텍스트 (연속 작성)
-- [ ] 우측 하단 아이콘 → 자동 배치
+- [x] 우측 하단 아이콘 → 자동 배치
 
 ---
 
