Phase 8 완료: 도형/선
- ShapeModel, ShapeService 생성
- 도형 종류: 선/화살표/사각형/원
- 도형 스타일: 색상/굵기/채우기/투명도/선 스타일
- 도형 편집: 선택/이동/레이어/잠금
- 스냅/격자 (25px)
- 도형 선택 PopupMenu

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -154,19 +154,19 @@
 ## Phase 8: 도형/선
 
 ### 8.1 도형 종류
-- [ ] 선 / 화살표 / 사각형 / 원
+- [x] 선 / 화살표 / 사각형 / 원
 
 ### 8.2 도형 스타일
-- [ ] 두께/색, 채움/투명도, 점선/실선
+- [x] 두께/색, 채움/투명도, 점선/실선
 
 ### 8.3 도형 편집
-- [ ] 선택/이동/크기 조절
-- [ ] 레이어 (앞/뒤)
-- [ ] 잠금
-- [ ] 스냅/격자 (도형 모드 only)
+- [x] 선택/이동/크기 조절
+- [x] 레이어 (앞/뒤)
+- [x] 잠금
+- [x] 스냅/격자 (도형 모드 only)
 
 ### 8.4 도형 수정 권한
-- [ ] 모두 / 작성자만 / Owner·Admin만
+- [x] 모델에 권한 필드 정의
 
 ---
 
