Phase 9 완료: 업로드/첨부
- MediaModel, MediaService 생성
- MediaWidget (이미지/영상/PDF 표시)
- Firebase Storage 파일 업로드
- 영상 재생 (video_player)
- 롱프레스 옵션 메뉴 (투명도, 레이어, 삭제)
- image_picker, file_picker 패키지 추가

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -173,22 +173,22 @@
 ## Phase 9: 업로드/첨부
 
 ### 9.1 사진 (PNG/JPG)
-- [ ] 업로드 + 크기 설정
-- [ ] 롱프레스 옵션 메뉴
-- [ ] 투명도 설정
+- [x] 업로드 + 크기 설정
+- [x] 롱프레스 옵션 메뉴
+- [x] 투명도 설정
 
 ### 9.2 영상
-- [ ] 크기 조절
-- [ ] 재생 버튼 / 재생 바
+- [x] 크기 조절
+- [x] 재생 버튼 / 재생 바
 
 ### 9.3 문서 (PDF)
-- [ ] 크기 조절
-- [ ] 페이지 넘김 버튼
-- [ ] 펼쳐보기 패널
+- [x] 크기 조절
+- [x] 페이지 넘김 버튼
+- [ ] 펼쳐보기 패널 (TODO)
 
 ### 9.4 오브젝트 롱프레스
-- [ ] 배경 Dim 처리
-- [ ] 팝업 메뉴
+- [x] 배경 Dim 처리
+- [x] 팝업 메뉴
 
 ---
 
