Phase 10 완료: 시간순 네비게이션
- TimelineNavigator 위젯 생성
- 세로 네비게이션 바 (우측)
- 이벤트 마커 (손글씨/텍스트/사진/영상/PDF)
- 탭/드래그 → 시간대별 점프
- jumpToPosition() 메서드 추가

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -194,9 +194,9 @@
 
 ## Phase 10: 시간순 네비게이션
 
-- [ ] 세로 네비게이션 바
-- [ ] 드래그/스크롤 → 시간/구간 점프
-- [ ] 이벤트 마커 (손글씨/사진/영상/PDF)
+- [x] 세로 네비게이션 바
+- [x] 드래그/스크롤 → 시간/구간 점프
+- [x] 이벤트 마커 (손글씨/사진/영상/PDF)
 
 ---
 
