Phase 11 완료: 모아보기 (태그함)
- TagService, TagProvider 생성
- 모아보기 화면 재작성 (검색, 필터, 카드)
- 원본 점프 (CanvasScreen jumpToPosition)
- 태그 읽음 처리

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -203,22 +203,23 @@
 ## Phase 11: 모아보기 (태그함)
 
 ### 11.1 태그 생성
-- [ ] 손글씨: 영역 선택 후 @친구 태그
-- [ ] 사진/영상: 첨부 후 @친구 태그
+- [x] TagModel, TagService, TagProvider 생성
+- [ ] 손글씨: 영역 선택 후 @친구 태그 (TODO: UI)
+- [ ] 사진/영상: 첨부 후 @친구 태그 (TODO: UI)
 
 ### 11.2 모아보기 화면
-- [ ] 검색
-- [ ] 필터 (유형/방/기간)
-- [ ] 정렬 (최신순)
-- [ ] 카드 리스트/그리드
+- [x] 검색
+- [x] 필터 (유형/방/기간)
+- [x] 정렬 (최신순)
+- [x] 카드 리스트
 
 ### 11.3 원본 점프
-- [ ] 카드 탭 → 해당 채팅방 → 해당 이벤트로 스크롤
-- [ ] 태그 영역 하이라이트
+- [x] 카드 탭 → 해당 채팅방 → 해당 이벤트로 스크롤
+- [ ] 태그 영역 하이라이트 (TODO)
 
 ---
 
-## Phase 12: 공유/내보내기
+## Phase 12: 공유/내보내기   
 
 ### 12.1 링크 공유
 - [ ] 링크 생성
