Phase 12 완료: 공유/내보내기
- ExportService 생성
- 링크 공유 (share_plus)
- 내보내기 다이얼로그 (PNG/JPG/PDF)
- 워터마크 옵션
- pdf, path_provider 패키지 추가

--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -222,16 +222,18 @@
 ## Phase 12: 공유/내보내기   
 
 ### 12.1 링크 공유
-- [ ] 링크 생성
-- [ ] 앱 미설치 → 읽기 전용 웹뷰
+- [x] 링크 생성 (createShareLink)
+- [x] 링크 공유 (share_plus)
+- [ ] 앱 미설치 → 읽기 전용 웹뷰 (TODO: 백엔드)
 
 ### 12.2 내보내기
-- [ ] 포맷: PDF / PNG / JPG
-- [ ] 범위: 부분 / 전체
-- [ ] 워터마크 (사용자 ID + 앱 이름)
+- [x] 포맷: PDF / PNG / JPG
+- [x] 워터마크 옵션
+- [x] 내보내기 다이얼로그 UI
+- [ ] 실제 캔버스 캡처 (TODO)
 
 ### 12.3 방장 설정
-- [ ] 내보내기 허용/차단
+- [ ] 내보내기 허용/차단 (TODO: 모델 확장)
 - [ ] 워터마크 강제
 - [ ] 로그 공개/비공개
 
