--- a/잉크_앱프로젝트_정보/개발_순서.md
+++ b/잉크_앱프로젝트_정보/개발_순서.md
@@ -79,11 +79,11 @@
 ### 4.2 채팅방 생성
 - [x] 1:1 채팅 생성
 - [x] 단톡(그룹채팅) 생성
-- [ ] 초대 링크 생성 (선택)
+- [x] 초대 링크 생성 (선택)
 
 ### 4.3 채팅방 설정
 - [x] 역할 관리 (Owner / Admin / Member / Viewer)
-- [ ] 권한 설정 (도형 수정, 내보내기 등)
+- [x] 권한 설정 (도형 수정, 내보내기 등)
 
 ---
 
@@ -115,7 +115,7 @@
 ### 5.5 지우개
 - [x] 펜↔지우개 전환
 - [x] 스트로크 단위 지우기
-- [ ] (선택) 픽셀 지우기
+- [x] (선택) 픽셀/영역 지우기 (드래그 시 연속 지우기)
 
 ---
 
@@ -137,7 +137,7 @@
 
 ### 6.4 호버 사용자 식별
 - [x] 펜 근접 시 커서/닉네임 표시
-- [ ] (선택) 친구만 / 전체 / OFF 설정
+- [x] (선택) 친구만 / 전체 / OFF 설정
 
 ---
 
@@ -184,7 +184,7 @@
 ### 9.3 문서 (PDF)
 - [x] 크기 조절
 - [x] 페이지 넘김 버튼
-- [ ] 펼쳐보기 패널 (TODO)
+- [x] 펼쳐보기 패널
 
 ### 9.4 오브젝트 롱프레스
 - [x] 배경 Dim 처리
@@ -204,8 +204,8 @@
 
 ### 11.1 태그 생성
 - [x] TagModel, TagService, TagProvider 생성
-- [ ] 손글씨: 영역 선택 후 @친구 태그 (TODO: UI)
-- [ ] 사진/영상: 첨부 후 @친구 태그 (TODO: UI)
+- [x] 손글씨: 영역 선택 후 @친구 태그 (캔버스 롱프레스 → 해당 스트로크 메뉴 → @친구 태그)
+- [x] 사진/영상: 첨부 후 @친구 태그 (미디어 롱프레스 → @친구 태그 → 친구 선택)
 
 ### 11.2 모아보기 화면
 - [x] 검색
@@ -215,7 +215,7 @@
 
 ### 11.3 원본 점프
 - [x] 카드 탭 → 해당 채팅방 → 해당 이벤트로 스크롤
-- [ ] 태그 영역 하이라이트 (TODO)
+- [x] 태그 영역 하이라이트 (원본 점프 시 금색 테두리·연한 채움, 3초 후 해제)
 
 ---
 
@@ -224,56 +224,56 @@
 ### 12.1 링크 공유
 - [x] 링크 생성 (createShareLink)
 - [x] 링크 공유 (share_plus)
-- [ ] 앱 미설치 → 읽기 전용 웹뷰 (TODO: 백엔드)
+- [ ] 앱 미설치 → 읽기 전용 웹뷰 (TODO: 백엔드/웹 앱 배포)
 
 ### 12.2 내보내기
 - [x] 포맷: PDF / PNG / JPG
 - [x] 워터마크 옵션
 - [x] 내보내기 다이얼로그 UI
-- [ ] 실제 캔버스 캡처 (TODO)
+- [x] 실제 캔버스 캡처
 
 ### 12.3 방장 설정
-- [ ] 내보내기 허용/차단 (TODO: 모델 확장)
-- [ ] 워터마크 강제
-- [ ] 로그 공개/비공개
+- [x] 내보내기 허용/차단 (RoomModel 확장 및 UI/로직)
+- [x] 워터마크 강제
+- [x] 로그 공개/비공개
 
 ---
 
 ## Phase 13: 설정
 
-- [ ] 프로필 편집
-- [ ] 알림 설정
-- [ ] 캔버스 확장 방식 설정
-- [ ] 캐시 관리
-- [ ] 계정 관리 (로그아웃/탈퇴)
+- [x] 프로필 편집
+- [x] 알림 설정
+- [x] 캔버스 확장 방식 설정
+- [x] 캐시 관리
+- [x] 계정 관리 (로그아웃/탈퇴)
 
 ---
 
 ## Phase 14: 성능 최적화
 
 ### 14.1 실시간 최적화
-- [ ] 스트로크/도형/호버: 경량 이벤트 스트림
-- [ ] 사진/영상/PDF: 별도 채널 + 캐시
+- [x] 스트로크/도형/호버: 경량 이벤트 스트림 (Firestore snapshots 유지, 미디어 별도 스트림)
+- [x] 사진/영상/PDF: 별도 채널 + 캐시 (MediaCacheService, CachedNetworkImage)
 
 ### 14.2 로딩 최적화
-- [ ] 썸네일/프리뷰 우선 로딩
-- [ ] 원본 지연 로딩
+- [x] 썸네일/프리뷰 우선 로딩
+- [x] 원본 지연 로딩
 
 ### 14.3 전송 상태 표시
-- [ ] 전송 중 → 완료 체크
+- [x] 전송 중 → 완료 체크
 
 ### 14.4 네트워크 불안정 처리
-- [ ] 재연결 중 배너
-- [ ] 대기열 표시
+- [x] 재연결 중 배너
+- [x] 대기열 표시
 
 ---
 
 ## Phase 15: 멀티 윈도우 / 플랫폼 확장
 
-- [ ] 분할/팝업 멀티 윈도우 지원
-- [ ] iOS 빌드 테스트
-- [ ] Web 빌드 테스트
-- [ ] (선택) PC 앱 빌드
+- [x] 분할/팝업 멀티 윈도우 지원 (Android resizeableActivity, 창 크기 유틸, iOS 15.0)
+- [ ] iOS 빌드 테스트 (Podfile iOS 15.0 반영, 로컬에서 `pod repo update` 후 빌드 권장)
+- [x] Web 빌드 테스트
+- [ ] (선택) PC 앱 빌드 (`flutter config --enable-macos-desktop` 후 빌드)
 
 ---
 
